@@ -55,7 +55,7 @@ class ConfigManager(object):
             'client.limit': 1000,
             'client.check_version': True,
             'client.bus_timeout': 10 * 60,
-            'icon.color': '#3465a4',
+            'icon.colors': '#3465a4,#555753,#cc0000',
             'image.max_size': 10 ** 6,
             'bug.url': 'https://bugs.tryton.org/',
             'download.url': 'https://downloads.tryton.org/',
