@@ -436,35 +436,18 @@ class Screen(SignalEvent):
             pos = 0
         self.signal('record-message', (pos, len(self.group) + self.offset,
             self.search_count, record and record.id))
-        attachment_count = 0
-        if record and record.attachment_count > 0:
-            attachment_count = record.attachment_count
-        self.signal('attachment-count', attachment_count)
-        unread_note = 0
-        if record and record.unread_note > 0:
-            unread_note = record.unread_note
-        self.signal('unread-note', unread_note)
-        # update attachment-count after 1 second
-        GLib.timeout_add(1000, self.update_attachment, record)
-        GLib.timeout_add(1000, self.update_note, record)
+        self.signal('resources', record.resources if record else None)
+        # update resources after 1 second
+        GLib.timeout_add(1000, self._update_resources, record)
         return True
 
     current_record = property(__get_current_record, __set_current_record)
 
-    def update_attachment(self, record):
-        if record != self.current_record:
-            return False
-        if record and self.signal_connected('attachment-count'):
-            attachment_count = record.get_attachment_count()
-            self.signal('attachment-count', attachment_count)
-        return False
-
-    def update_note(self, record):
-        if record != self.current_record:
-            return False
-        if record and self.signal_connected('unread-note'):
-            unread_note = record.get_unread_note()
-            self.signal('unread-note', unread_note)
+    def _update_resources(self, record):
+        if (record
+                and record == self.current_record
+                and self.signal_connected('resources')):
+            self.signal('resources', record.get_resources())
         return False
 
     def destroy(self):
